--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   width: 1200px;
 }
 
-.custom-bg-cars::after {
+/* .custom-bg-cars::after {
   content: "";
   position: absolute;
   width: 66.5rem;
@@ -30,4 +30,4 @@
   background-position: center;
   width: 41.75rem;
   z-index: -2;
-}
+} */
