--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,14 @@
   width: 1200px;
 }
 
-/* .custom-bg-cars::after {
+.custom-bg-cars::after {
   content: "";
   position: absolute;
   width: 66.5rem;
-  top: 27%;
-  left: 25%;
+  top: 0;
+  left: 26%;
   right: 0;
-  bottom: 0;
+  bottom: 47%;
   background-image: url("./img/Hero.svg");
   background-size: auto;
   background-repeat: no-repeat;
@@ -23,11 +23,11 @@
   top: 0;
   left: 48%;
   right: 0;
-  bottom: 28%;
+  bottom: 70%;
   background-image: url("./img/Subtract.svg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   width: 41.75rem;
   z-index: -2;
-} */
+}
